--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,7 @@
 @import "partials/variables";
 @import "partials/mixins";
 
+@import "partials/helper";
 @import "partials/grid";
 @import "partials/fancybox";
 @import "partials/index";
