--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -27,7 +27,9 @@ a {
 #wrap {
   position: relative;
   max-width: 960px;
-  margin: 0 auto;
+  margin: 30px auto;
+  border-radius: 5px;
+  background-color: #474544;
   box-shadow: 0 2px 70px rgba(0,0,0,.45);
 }
 #wrap.grid:before {
@@ -60,6 +62,7 @@ a {
 
 /* 머릿말 */
 #header {
+  border-radius: 5px 5px 0 0;
   background-color: #474544;
   text-align: center;
 }
@@ -142,6 +145,7 @@ a {
 /* 꼬릿말 */
 #footer {
   padding: 10px 0;
+  border-radius: 0 0 5px 5px;
   background-color: #474544;
   text-align: center;
 }
@@ -895,4 +899,102 @@ a {
     background-color: #474544;
     border: 1px solid #434a54;
     border-radius: 4px;
+}
+
+#sidebar {
+  margin-top: 10px;
+  margin-left: 8%;
+  padding-left: 4%;
+  padding-right: 4%;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+@media (max-width: 980px) {
+  #sidebar {
+    margin: 0;
+  }
+}
+.sidebar_box {
+  margin-bottom: 40px;
+}
+.sidebar_box h4 {
+  font-size: 16px;
+  font-weight: 600;
+  color: #444;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: normal;
+  line-height: 27px;
+  margin: 0 0 14px 0;
+}
+.cat_list {
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.cat_list li {
+  padding: 5px 0;
+  border-bottom: 1px solid #e5e5e5;
+}
+.cat_list a,
+.cat_list li i {
+  color: #888;
+  margin-right: 10px;
+  transition: all 200ms ease-in;
+}
+.input_search {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #7a7a7a;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ddd;
+  border-radius: 0;
+  box-shadow: none;
+  transition: all 200ms ease-in;
+}
+.widget_search {
+  position: relative;
+}
+.widget_search i {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #777;
+}
+.popular_post li:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+.popular_img {
+  float: left;
+  margin-right: 10px;
+}
+.popular_img img {
+  width: 60px;
+  height: 60px;
+}
+.popular_desc h5 {
+  font-size: 14px;
+  margin: 0;
+  padding: 5px 0 20px 0;
+}
+.popular_desc h6 {
+  font-size: 11px;
+  color: #888;
+  font-style: italic;
+  font-weight: normal;
+  margin: 0;
+}
+.tag_list li {
+  display: inline-block;
+  margin-right: 5px;
+}
+.tag_list a {
+  color: #888;
 }
