--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -1,15 +1,21 @@
 @charset "utf-8";
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
-/* 공통 */
+/**
+ * --------------------------------
+ * 공통
+ * --------------------------------
+ */
 * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
 body {
-  font-family: "나눔고딕",NanumGothic,"맑은고딕",MalgunGothic;
-  font-size: 14px;
+  margin: 0px;
+  padding: 0px;
+  font-family: '맑은 고딕', MalgunGothic, '나눔고딕', NanumGothic;
+  font-size: 13px;
   color: #333;
   background: url(../img/mybg.png) #fff;
 }
@@ -23,7 +29,11 @@ a {
   text-decoration: none;
 }
 
-/* 전체페이지 */
+/**
+ * --------------------------------
+ * 전체페이지
+ * --------------------------------
+ */
 #wrap {
   position: relative;
   max-width: 960px;
@@ -43,7 +53,11 @@ a {
   z-index: 1000;
 }
 
-/* SKIP */
+/**
+ * --------------------------------
+ * SKIP TO MAIN
+ * --------------------------------
+ */
 .skip-to-main {
   height: 1px;
   overflow: hidden;
@@ -60,7 +74,11 @@ a {
   height: auto;
 }
 
-/* 머릿말 */
+/**
+ * --------------------------------
+ * 머릿말
+ * --------------------------------
+ */
 #header {
   border-radius: 5px 5px 0 0;
   background-color: #474544;
@@ -71,7 +89,11 @@ a {
   display: table;
 }
 
-/* 머릿말 > 브랜드 및 로고 */
+/**
+ * --------------------------------
+ * 머릿말 > 브랜드 및 로고
+ * --------------------------------
+ */
 #brand {
   color: #fff;
   border-bottom: 1px solid rgba(255,255,255,0.1);
@@ -81,7 +103,11 @@ a {
   color: #a8a8a8;
 }
 
-/* 머릿말 > 네비게이션 */
+/**
+ * --------------------------------
+ * 머릿말 > 네비게이션
+ * --------------------------------
+ */
 #navigation {
   position: relative;
   background-color: #474544;
@@ -112,37 +138,49 @@ a {
   font-weight: 600;
   color: #fff;
 }
-#navigation > .menu > ul {
+.menu > ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-#navigation > .menu > ul > li {
+.menu > ul > li {
   display: inline-block;
   position: relative;
+  text-transform: uppercase;
 }
-#navigation > .menu > ul > li > a {
+.menu > ul > li > a {
   display: block;
   padding: 1em 1em 1em;
   font-weight: 500;
   color: #a8a8a8;
   text-decoration: none;
-  transition: color 0.3s ease-in-out;
+  transition: color 0.3s;
 }
-#navigation > .menu > ul > li.active > a {
+.menu > ul > li > a > i {
+  margin-left: 6px;
+}
+.menu > ul > li.active > a {
   color: #fff;
 }
-#navigation > .menu > ul > li > a:hover {
+.menu > ul > li:hover > a {
   color: #fff;
 }
 
-/* 본문 */
+/**
+ * --------------------------------
+ * 본문
+ * --------------------------------
+ */
 #content {
   padding: 10px 0;
   background-color: #fff;
 }
 
-/* 꼬릿말 */
+/**
+ * --------------------------------
+ * 꼬릿말
+ * --------------------------------
+ */
 #footer {
   padding: 10px 0;
   border-radius: 0 0 5px 5px;
@@ -156,13 +194,24 @@ a {
   color: #a8a8a8;
 }
 
-/* 모바일영역 */
+/**
+ * --------------------------------
+ * 모바일영역
+ * --------------------------------
+ */
 @media (max-width: 768px) {
+  #wrap {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
   #navigation .title {
     display: inline-block;
   }
   #navigation .menu {
     display: none;
+  }
+  #navigation .menu > ul > li:hover a {
+    background-color: #333;
   }
   #navigation > .toggle-menu {
     display: inline-block;
@@ -184,7 +233,11 @@ a {
   }
 }
 
-/* HOME PAGE */
+/**
+ * --------------------------------
+ * HOME PAGE
+ * --------------------------------
+ */
 .home_grid {
   margin: 10px 0 10px 10px;
   overflow: hidden;
@@ -271,59 +324,12 @@ a {
   margin: 0;
 }
 
-/*
-.post_date,
-.post_tit,
-.post_content,
-.post_footer {
-  margin-left: 30px;
-  margin-right: 30px;
-}
-.post_date {
-  margin-top: 30px;
-  color: #f94646;
-}
-.post_date .fa-clock-o {
-  margin-right: 5px;
-  font-size: 15px;
-  vertical-align: top;
-}
-.post_tit {
-  font-size: 18px;
-  font-weight: bold;
-}
-.post_content,
-.post_footer {
-  color: #878787;
-}
-.post_content {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.post_footer p {
-  display: inline-block;
-  margin-bottom: 30px;
-}
-.post_like_view {
-  margin-right: 10px;
-}
-.post_footer .fa-heart,
-.post_footer .fa-commenting {
-  margin-right: 5px;
-  font-size: 14px;
-  color: #d0d0d0;
-  vertical-align: top;
-}
-.post_footer .fa-heart {
-  margin-top: 1px;
-}
-*/
 
-
-/* ABOUT PAGE */
+/**
+ * --------------------------------
+ * ABOUT PAGE
+ * --------------------------------
+ */
 /* About me */
 .about_me {
   margin-top: -10px;
@@ -699,7 +705,11 @@ a {
   font-size: 12px;
 }
 
-/* PORTFOLIO PAGE */
+/**
+ * --------------------------------
+ * PORTFOLIO PAGE
+ * --------------------------------
+ */
 .nav-filter {
 }
 .nav {
@@ -844,8 +854,11 @@ a {
   }
 }
 
-
-/* BLOG */
+/**
+ * --------------------------------
+ * BLOG PAGE
+ * --------------------------------
+ */
 .blog_post {
   border-bottom: 1px dashed #ccc;
   padding-bottom: 10px;
@@ -903,7 +916,7 @@ a {
 
 #sidebar {
   margin-top: 10px;
-  margin-left: 8%;
+  margin-left: 4%;
   padding-left: 4%;
   padding-right: 4%;
   padding-right: 15px;
@@ -997,4 +1010,33 @@ a {
 }
 .tag_list a {
   color: #888;
+}
+#pagenavi {
+  padding: 20px;
+  font-size: 13px;
+  text-align: center;
+}
+#pagenavi .active {
+  color: #F86517;
+  font-weight: bold;
+}
+
+.blog_list2 {
+  padding: 20px;
+  font-size: 12px;
+}
+.blog_list2 li {
+  padding: 5px 0;
+  border-bottom: 1px solid #ccc;
+}
+.blog_list2 .date {
+  margin-right: 10px;
+}
+.blog_list2 li a {
+  -webkit-font-smoothing: antialiased;
+  color: #344375;
+}
+.cnt {
+  font-size: 10px;
+  color: #555;
 }
