--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -1089,17 +1089,17 @@ a {
   text-align: center;
 }
 .blog_sharebox .tag_list,
-.blog_sharebox .share_list {
+.blog_sharebox .share_list,
+.blog_sharebox .leave_comment,
+.blog_sharebox .comment_list {
   padding-bottom: 10px;
 }
 .blog_sharebox h4 {
   margin: 10px 0;
   font-size: 14px;
 }
-.blog_sharebox ul {
-  display: inline-block;
-}
-.blog_sharebox li {
+.tag_list li,
+.share_list li {
   display: inline-block;
   margin-right: 5px;
   font-size: 12px;
@@ -1113,7 +1113,7 @@ a {
   content: '';
 }
 
-/* Leave Commnet */
+/* Leave Comment */
 .leave_comment {
   text-align: left;
 }
@@ -1139,6 +1139,36 @@ a {
   color: #fff;
   background-color: #474544;
   border: 1px solid #434a54;
+}
+
+/* Comment List */
+.comment_list {
+  text-align: left;
+  font-style: normal;
+  color: #333;
+}
+.comment_list ul ul {
+  margin-left: 80px;
+}
+.comment_list li {
+  display: block;
+}
+.comment_list h4 {
+  font-size: 14px;
+}
+.comment_list .comment_reply {
+  font-style: italic;
+  color: #CC3333;
+}
+.comment_list .comment_reply,
+.comment_list p,{
+  font-size: 12px;
+}
+.comment_list img {
+  width: 60px;
+  height: 60px;
+  margin-right: 20px;
+  float: left;
 }
 
 
