--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -114,6 +114,7 @@ a {
   position: relative;
   background-color: #474544;
   color: #a8a8a8;
+  z-index: 10000;
 }
 #navigation > .btn {
   display: inline-block;
@@ -931,6 +932,9 @@ a {
 .sidebar_box {
   margin-bottom: 40px;
 }
+.sidebar_box:first-child {
+  margin-top: 20px;
+}
 .sidebar_box h4 {
   font-size: 16px;
   font-weight: 600;
@@ -1091,7 +1095,8 @@ a {
 .blog_sharebox .tag_list,
 .blog_sharebox .share_list,
 .blog_sharebox .leave_comment,
-.blog_sharebox .comment_list {
+.blog_sharebox .comment_list,
+.blog_sharebox .paper {
   padding-bottom: 10px;
 }
 .blog_sharebox h4 {
@@ -1115,6 +1120,7 @@ a {
 
 /* Leave Comment */
 .leave_comment {
+  margin-top: 20px;
   text-align: left;
 }
 .leave_comment textarea {
@@ -1150,6 +1156,11 @@ a {
 .comment_list ul ul {
   margin-left: 80px;
 }
+@media (max-width: 980px) {
+  .comment_list ul ul {
+    margin-left: 40px;
+  }
+}
 .comment_list li {
   display: block;
 }
@@ -1164,11 +1175,80 @@ a {
 .comment_list p,{
   font-size: 12px;
 }
+.comment_list p {
+  margin-left: 80px;
+}
 .comment_list img {
   width: 60px;
   height: 60px;
   margin-right: 20px;
   float: left;
 }
+.paper {
+  text-align: initial;
+  margin: 20px 0;
+}
+.paper ul:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+.paper a {
+  display: inline-block;
+  padding: 15px 14px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 30px;
+}
+.previous {
+  float: left;
+}
+.next {
+  float: right;
+}
 
-
+/**
+ * --------------------------------
+ * CONTACT PAGE
+ * --------------------------------
+ */
+#map {
+  width: 100%;
+  height: 350px;
+  margin-top: -10px;
+}
+.contact {
+  padding: 10px;
+  line-height: 1.75em;
+}
+.contact_input {
+  display: block;
+  width: 100%;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  padding: 10px;
+  overflow: hidden;
+  resize: none;
+}
+.btn_contact {
+  width: 100%;
+  border: 1px solid #434a54;
+  padding: 12px 24px;
+  background-color: #474544;
+  color: #fff;
+}
+.contact_info {
+  padding: 0 10px;
+}
+.contact_message,
+.contact_phone,
+.contact_email,
+.contact_addr {
+  -webkit-font-smoothing: antialiased;
+  color: #555;
+}
+.contact_email,
+.contact_phone {
+  margin-left: 5px;
+  color: #344375;
+}
