--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -141,11 +141,6 @@ a {
   font-weight: 600;
   color: #fff;
 }
-.menu {
-  position: relative;
-  opacity: 1;
-  z-index: 1;
-}
 .menu > ul {
   margin: 0;
   padding: 0;
@@ -228,7 +223,9 @@ a {
   }
   #navigation > .toggle-menu.active ~ .menu {
     display: block;
-    position: relative;
+    position: absolute;
+    left: 0;
+    right: 0;
     text-align: left;
     overflow-y: auto;
     z-index: 1;
