모바일용 네비게이션 수정

--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -214,6 +214,9 @@ a {
   }
   #navigation .menu {
     display: none;
+    position: absolute;
+    left: 0;
+    right: 0;
     text-align: left;
     overflow-y: auto;
   }
@@ -228,17 +231,6 @@ a {
   #navigation > .toggle-menu {
     display: inline-block;
   }
-  // #navigation > .toggle-menu.active ~ .menu {
-  //   display: block;
-  //   text-align: left;
-  //   overflow-y: auto;
-  //   z-index: 1;
-  // }
-  // #navigation > .toggle-menu.active ~ .menu li {
-  //   display: block;
-  //   background-color: #474544;
-  //   border-top: 1px solid rgba(255,255,255,0.1);
-  // }
   #navigation > .toggle-sidebar {
     display: block;
   }
