--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -217,6 +217,7 @@ a {
     position: absolute;
     left: 0;
     right: 0;
+    margin-top: -1px;
     text-align: left;
     overflow-y: auto;
   }
