--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -97,7 +97,7 @@ a {
  */
 #brand {
   color: #fff;
-  border-bottom: 1px solid rgba(255,255,255,0.1);
+  border-bottom: 1px solid #4C4C4C;
 }
 #brand > h1 > small {
   display: block;
@@ -224,7 +224,7 @@ a {
   #navigation .menu li {
     display: block;
     background-color: #474544;
-    border-top: 1px solid rgba(255,255,255,0.1);
+    border-top: 1px solid #4C4C4C;
   }
   #navigation .menu > ul > li:hover a {
     background-color: #333;
